# govee-humidity-control

./: .gitignore  Cargo.toml  README.md  Service.md  devices.config.template  main.py  setup.sh
src/: main.rs
