[package]
name = "govee-humidity-control"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "govee-humidity-control"
path = "src/main.rs"